# project-2_KORYTNIKOV_25-555

./: .gitignore  Makefile  README.md  db_meta.json  instructions.txt  instructions2.txt  instructions3.txt  pyproject.toml  smoke_test_commands.txt  smoke_test_crud.txt  smoke_test_decorators.txt
data/: users.json
src/primitive_db/: __init__.py  core.py  decorators.py  engine.py  utils.py
